# ai-subtitles

./: .gitignore  README.md  pyproject.toml
ai_subtitles/: cli.py  gpt_translate.py  split.py  whisper_transcribe.py
